# DIPLabs

./: .gitignore  CMakeLists.txt  README.md
src/: lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  lab6.cpp
src/lib/: BMPUtil.cpp  BMPUtil.h  CMakeLists.txt  ColorConverter.cpp  ColorConverter.h  Convolution.cpp  Convolution.h  GeometricTransformation.cpp  GeometricTransformation.h  MorphologicalOperation.cpp  MorphologicalOperation.h  Type.h  VisibilityEnhancement.cpp  VisibilityEnhancement.h
